fix: modal overflow

--- a/src/shared/ui-kit/modal/Modal.module.scss
+++ b/src/shared/ui-kit/modal/Modal.module.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     max-width: 250px;
+    overflow: hidden;
 
     border-radius: 8px;
     background: var(--layer-0);
